--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "ca.judacribz.catchbasinsurveilence"
+        applicationId "ca.judacribz.mosquitomanager"
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
