Catch Basin functionality finished. List for each date of catch basin info displays in CatchBasinData listview. On login, catch basin info loaded into local database from firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,9 +39,10 @@
         </activity>
         <activity
             android:name=".CatchBasin"
-            android:label="@string/catch_basin_surveillance" />
+            android:label="@string/catch_basin_surveillance"
+            android:theme="@style/CatchBasinTheme"/>
         <activity android:name=".Menu" />
-        <activity android:name=".CatchBasinData"></activity>
+        <activity android:name=".CatchBasinData"/>
     </application>
 
 </manifest>
